<resources>
    <string name="app_name">MyFirstKotlinApp</string>
    <string name="birth_date">Birthdate</string>
    <string name="country">Country</string>
    <string name="apply">apply</string>
    <string name="first_name">Enter your First Name</string>
    <string name="last_name">Last Name</string>
    <string name="lets_count_together">Lets Count Together</string>
    <string name="_1">1</string>
    <string name="first_number">First Number</string>
    <string name="secondNumber">Second Number</string>
    <string name="Calculate">"Press me "</string>
    <string name="Add">Add</string>
    <string name="Result">Result</string>
    <string name="Subtract">Subtract</string>
    <string name="Multiply">Multiply</string>
    <string name="Divide">Divide</string>
    <string name="Dvde">/</string>
    <string name="Acceptance_Lead_Email">You have been Accepted to Lead Program</string>
    <string name="Button">Button</string>
    <string name="title_activity_restaurant_menu">RestaurantMenu</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="burgerQuestion">Which Burgur Type do you want?</string>
    <string name="Vegetrian">Vegetrian</string>
    <string name="Vegan">Vegan</string>
    <string name="SpecialVegetrian">Special Vegetrian</string>
    <string name="Cheese">Cheese</string>
    <string name="Oninos">Onions</string>
    <string name="Salad">Salad</string>
    <string name="order">Order</string>
    <string name="customtoast">This is a custom Toast</string>
    <string name="gdscLogo">gdscLogo</string>
    <string name="settings">Settings</string>
    <string name="events">Events</string>
    <string name="Core_Team">Core Team</string>
    <string name="Log_out">Log out</string>
    <string name="members">Members</string>
    <string name="enter_to_do">Enter the tasks you need them done</string>
    <string name="To_Do">"To do "</string>
    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>